--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,34 +1,58 @@
 {{ 'section-hero.css' | asset_url | stylesheet_tag }}
+{{ 'component-heading.css' | asset_url | stylesheet_tag }}
+{{ 'component-button.css' | asset_url | stylesheet_tag }}
+
 {%- if section.settings.image != blank -%}
   {%- style -%}
-  #Hero-{{ section.id }} {
-    background-color: black;
-    line-height: 0;
-  }
-  .hero-image {
-    opacity: {{ section.settings.image_overlay_opacity | divided_by: 100.0 }};
-    object-position: 50% {{ section.settings.image_vertical_alignment }}%;
-  }
+    .hero-image {
+      object-position: {{ section.settings.image_horizontal_alignment }}% {{ section.settings.image_vertical_alignment }}%;
+    }
   {%- endstyle -%}
 {% endif %}
+{%- style -%}
+  #Hero-{{ section.id }}::after {
+    opacity: {{ section.settings.image_overlay_opacity | divided_by: 100.0 }};    }
+{%- endstyle -%}
 <div id="Hero-{{ section.id }}" class="hero hero--content-align-{{ section.settings.desktop_content_alignment }}">
-  {%- if section.settings.image == blank -%}
-  {{ 'lifestyle-2' | placeholder_svg_tag: 'placeholder-svg' }}
-    {%- elsif section.settings.image != blank -%}
-    {%-liquid
-      assign image_height = 'image-height-' | append: section.settings.image_height
-      if section.settings.adapt_height_first_image
-        assign original_height = "original_height "
-      endif
-      assign classes = 'hero-image ' | append: image_height | append: original_height
-      -%}
-    {{ section.settings.image | image_url: width: 1500 | image_tag:
-      loading: 'lazy',
-      class: classes,
-      alt: section.settings.image.alt | escape
-    }}
+  <div class="hero-container">
+    {%- if section.settings.image == blank -%}
+    {{ 'lifestyle-2' | placeholder_svg_tag: 'hero-image' }}
+      {%- elsif section.settings.image != blank -%}
+      {%-liquid
+        assign image_height_desktop = 'desktop-image-height-' | append: section.settings.desktop_image_height | append: " - "
+        assign image_height_mobile = 'mobile-image-height-' | append: section.settings.mobile_image_height | append: " - "
+        if section.settings.adapt_height_first_image
+          assign original_height_desktop = "desktop-original-height"
+        elsif section.settings.mobile_adapt_height_first_image
+          assign original_height_mobile = "mobile-original-height"
+        endif
+        assign classes = 'hero-image ' | append: image_height_desktop | append: image_height_mobile | append: original_height_desktop | append: original_height_mobile
+        -%}
+      {{ section.settings.image | image_url: width: 1500 | image_tag:
+        loading: 'lazy',
+        class: classes,
+        alt: section.settings.image.alt | escape
+      }}
     {% endif %}
-</div>
+    
+      <div class="hero-content-container">
+        <div class="hero-content">
+          {%- for block in section.blocks -%}
+            {%- case block.type -%}
+              {%- when 'heading' -%}
+                <div class="heading-container">
+                  {% render "component-heading", text: block.settings.heading | escape, size: block.settings.heading_size, color: block.settings.heading_color %}
+                </div>
+              {%- when 'button' -%}
+                <div class="button-container">
+                  {% render "component-button", label: block.settings.button_label | escape, link: block.settings.button_link, text_color: block.settings.text_color, button_color: block.settings.button_color, button_transparent: block.settings.button_transparent %}
+                </div>
+            {%- endcase -%}
+          {%- endfor -%}
+        </div>
+      </div>
+
+  </div>
 </div>
 
 {% schema %}
@@ -48,7 +72,7 @@
         "step": 5,
         "unit": "%",
         "label": "Image overlay opacity",
-        "default": 90
+        "default": 40
       },
       {
         "type": "range",
@@ -57,11 +81,25 @@
         "max": 100,
         "step": 5,
         "unit": "%",
-        "label": "Desktop vertical alignment",
+        "label": "Vertical alignment",
         "default": 50
       },
       {
-        "id": "image_height",
+        "type": "range",
+        "id": "image_horizontal_alignment",
+        "min": 0,
+        "max": 100,
+        "step": 5,
+        "unit": "%",
+        "label": "Horizontal alignment",
+        "default": 50
+      },
+      {
+        "type": "header",
+        "content": "Desktop layout"
+      },
+      {
+        "id": "desktop_image_height",
         "type": "select",
         "options": [
           {
@@ -86,27 +124,129 @@
         "default": false,
         "label": "Original image height",
         "info": "Overwrites image banner height setting when checked."
-      }, 
+      },
       {
         "type": "header",
         "content": "Mobile layout"
       },
       {
-        "type": "range",
-        "id": "image_horizontal_alignment",
-        "min": 0,
-        "max": 100,
-        "step": 1,
-        "unit": "%",
-        "label": "Mobile horizoltal alignment",
-        "default": 50
-      }
-    ],
-    "presets": [
+        "id": "mobile_image_height",
+        "type": "select",
+        "options": [
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "medium",
+        "label": "Hero height"
+      },
       {
-       "name": "Hero"
+        "type": "checkbox",
+        "id": "mobile_adapt_height_first_image",
+        "default": false,
+        "label": "Original image height",
+        "info": "Overwrites image banner height setting when checked."
       }
     ],
-    "templates": ["index"]
-  }
+    "blocks": [
+    {
+      "type": "heading",
+      "name": "Heading",
+      "limit": 2,
+      "settings": [
+        {
+          "type": "text",
+          "id": "heading",
+          "default": "Image banner",
+          "label": "Heading"
+        },
+        {
+          "type": "color",
+          "id": "heading_color",
+          "label": "Heading color",
+          "default": "#FFF"
+        },
+        {
+          "type": "select",
+          "id": "heading_size",
+          "options": [
+            {
+              "value": "small",
+              "label": "small"
+            },
+            {
+              "value": "medium",
+              "label": "medium"
+            },
+            {
+              "value": "large",
+              "label": "large"
+            }
+          ],
+          "default": "medium",
+          "label": "Heading size"
+        }
+      ]
+    },
+    {
+      "type": "button",
+      "name": "Button",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "button_label",
+          "default": "Button label",
+          "label": "Button label",
+          "info": "Leave the label blank to hide the button."
+        },
+        {
+          "type": "url",
+          "id": "button_link",
+          "label": "Button link"
+        },
+        {
+          "type": "color",
+          "id": "text_color",
+          "label": "Label color",
+          "default": "#FFF"
+        },
+        {
+          "type": "color",
+          "id": "button_color",
+          "label": "Button color",
+          "default": "#FFF"
+        },
+        {
+          "type": "checkbox",
+          "id": "button_transparent",
+          "default": true,
+          "label": "Transparent"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Hero",
+      "blocks": [
+       {
+         "type": "heading"
+       },
+       {
+         "type": "button"
+       }
+    ]
+    }
+  ]
+}
 {% endschema %}
