--- a/sections/collections-slider.liquid
+++ b/sections/collections-slider.liquid
@@ -4,41 +4,110 @@
 {{ 'glider.min.css' | asset_url | stylesheet_tag }}
 {{ 'glider.min.js' | asset_url | script_tag }}
 
+  <script>
+    function initGlider() {
+      new Glider(document.querySelector('.glider'), {
+        slidesToShow: 1.5,
+        draggable: true,
+        arrows: {
+          prev: '.button-prev',
+          next: '.button-next'
+        },
+        responsive: [
+          {
+            breakpoint: 500,
+            settings: {
+              slidesToShow: 2.5
+            }
+          },
+          {
+            breakpoint: 800,
+            settings: {
+              slidesToShow: 3.5
+            }
+          },
+          {
+            breakpoint: 1100,
+            settings: {
+              slidesToShow: 4.5
+            }
+          },
+          {
+            breakpoint: 1400,
+            settings: {
+              slidesToShow: 5.5
+            }
+          }
+        ]
+      })
+    };
+    window.addEventListener("load", function() {
+      initGlider();
+    });
+    window.addEventListener('shopify:section:load', function() {
+      initGlider();
+    });
+    function dodod(url) {
+      window.location = url
+    }
+</script>  
 
+  {%- style -%}
+    .collections-slider-{{ section.id }} {
+      background-color: {{ section.settings.background_color }}
+    }
+    .glider-button, .button-prev::after, .button-next::after {
+      border-color: {{ section.settings.arrows_color }};
+    }
+    .button-prev::before, .button-next::before {
+      background: {{ section.settings.arrows_color }};
+    }
+    .glider-track {
+      height: {{ section.settings.height }}px;
+    }
 
-{% javascript %}
-  window.addEventListener('load', function(){
-    new Glider(document.querySelector('.glider'), {
-      slidesToScroll: 1,
-      slidesToShow: 1,
-      draggable: true,
-      dots: '.dots',
-      arrows: {
-        prev: '.glider-prev',
-        next: '.glider-next'
-      }
-    })
-  })
-{% endjavascript %}
-  
-  <div class="glider-contain collections-slider" >
-    <div class="glider">
-    {%- for block in section.blocks -%}
-      <div class="collection-container">
-        {{ block.settings.collection.featured_image | image_url: width: 500 | image_tag:
-          loading: 'lazy',
-          class: 'collection-img',
-          alt: block.settings.collection.featured_image.alt | escape
-        }}
-        <div class="collection-title">
-          {% render "component-heading", text: block.settings.collection.title | escape, size: block.settings.heading_size, color: block.settings.heading_color %}
+  {%- endstyle -%}
+
+  <div class="collections-slider-{{ section.id }}"  >
+    <div class="glider-contain" >
+      <div class="glider collections-slider-collections_container">
+        {%- for block in section.blocks -%}
+          <div class="collections_slider-item_container">
+            {%-liquid
+              if block.settings.heading == blank
+                assign title = block.settings.collection.title
+              else
+                assign title = block.settings.heading
+              endif
+              if block.settings.collection_image != blank
+                assign image_url = block.settings.collection_image
+              elsif block.settings.collection.featured_image != blank
+                assign image_url = block.settings.collection.featured_image
+              else 
+                assign image_url = blank
+              endif
+            -%}
+            {% if image_url != blank %}
+              {{ image_url | image_url: width: 500 | image_tag:
+                loading: 'lazy',
+                class: 'collections_slider-img',
+                alt: block.settings.collection.featured_image.alt | escape
+              }}
+            {% else %}
+              {{ 'collection-1' | placeholder_svg_tag: 'collections-slider_placeholder' }}
+            {% endif %}
+            <div class="collections_slider-title">
+              {% render "component-heading", id: section.id | escape, text: title | escape, size: 'small', color: section.settings.heading_color %}
+            </div>
+          <div class="collections_slider-button_container">
+            {% render "component-button", id: section.id | escape, label: block.settings.button_label | escape, link: block.settings.button_link, text_color: section.settings.text_color, button_color: section.settings.button_color, button_transparent: section.settings.button_transparent %}
+          </div>
         </div>
-      </div>
-    {%- endfor -%}
+      {%- endfor -%}
+    </div>
+    <button aria-label="Previous" class="glider-button button-prev"></button>
+    <button aria-label="Next" class="glider-button button-next"></button>
   </div>
-  <button aria-label="Previous" class="glider-prev">«</button>
-  <button aria-label="Next" class="glider-next">»</button>
-  
 </div>
 
 {% schema %}
@@ -47,29 +116,53 @@
     "settings": [
       {
         "type": "color",
+        "id": "background_color",
+        "label": "Background color",
+        "default": "#FFF"
+      },
+      {
+        "type": "number",
+        "id": "height",
+        "label": "Slider height",
+        "info": "In px"
+      },
+      {
+        "type": "color",
+        "id": "arrows_color",
+        "label": "Arrows color",
+        "default": "#FFF"
+      },
+      {
+        "type": "header",
+        "content": "Heading"
+      },
+      {
+        "type": "color",
         "id": "heading_color",
         "label": "Heading color",
         "default": "#FFF"
       },
       {
-        "type": "select",
-        "id": "heading_size",
-        "options": [
-          {
-            "value": "small",
-            "label": "small"
-          },
-          {
-            "value": "medium",
-            "label": "medium"
-          },
-          {
-            "value": "large",
-            "label": "large"
-          }
-        ],
-        "default": "small",
-        "label": "Heading size"
+        "type": "header",
+        "content": "Button"
+      },
+      {
+        "type": "color",
+        "id": "text_color",
+        "label": "Label color",
+        "default": "#FFF"
+      },
+      {
+        "type": "color",
+        "id": "button_color",
+        "label": "Button color",
+        "default": "#FFF"
+      },
+      {
+        "type": "checkbox",
+        "id": "button_transparent",
+        "default": true,
+        "label": "Transparent"
       }
     ],
     "blocks": [
@@ -84,6 +177,12 @@
           "label": "Collection"
         },
         {
+          "type": "image_picker",
+          "id": "collection_image",
+          "label": "Collection",
+          "info": "Leave blank for default collection image"
+        },
+        {
           "type": "text",
           "id": "heading",
           "label": "Heading",
@@ -94,11 +193,6 @@
           "id": "button_label",
           "label": "Button label",
           "info": "Leave the label blank to hide the button."
-        },
-        {
-          "type": "url",
-          "id": "button_link",
-          "label": "Button link"
         }
       ]
     }
